# ad_attributes_scraper

./: .gitignore  LICENSE.txt  README.md  main.py  pyproject.toml  test_ad_schema.cpp
.github/workflows/: monthly_release.yml
modules/: attributes_scraper.py  header_generator.py  repo_handler.py  schema_parser.py
src/: __init__.py  models.py
src/generator/: __init__.py  cpp_generator.py
src/parser/: __init__.py  schema_parser.py
src/repo/: __init__.py  git_manager.py
src/scraper/: __init__.py  web_scraper.py
