[project]
name = "ad-attributes-scraper"
version = "0.1.0"
description = "Active Directory Schema Attributes Scraper"
authors = [
    {name = "scc"}
]
license = {text = "Cycraft"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.3,<5.0.0",
    "requests>=2.32.3,<3.0.0"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
scraper = "main:main"
